# grasp_generator

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: Grasp.action
config/: experiment.yaml  experiment_products.yaml  experiment_products_real.yaml  multi_quadric.yaml  pointcloud_filtering.yaml  products.yaml
include/grasp_generator/: detect_server.h  grasp_messages.h
launch/: grasp_world.launch  prolog.launch
msg/: GraspConfigList.msg
owl/: affordance_ont.owl  primitive_ontol.owl
scripts/grasp_generator/: SPaRGE_version_1.py  SPaRGE_version_2.py  computation_plot.py  data_generation.py  data_generation_semantics.py  grasp_shape_reasoning_module1.py  grasp_shape_reasoning_module2.py  groundtruth_visualization.py  real_world_shape_reasoning_version1.py  semantic_reasoning.csv  shape_classification.ipynb  shape_optimalisation.py  shape_optimalisation_real_object.py  shape_reasoning.py  shape_reasoning_module1.py  shape_reasoning_module2.py  shape_reasoning_version1.py  shape_reasoning_version2.py  standard_scalar.pkl  start.py
scripts/grasp_generator/server_clients/: aruco_server.py  detect_client.py  grasp_client.py  grasp_server.py  model_mlp.pkl  multiquadric_client.py  multiquadric_server.py  product_client.py  product_pose.py  semantic_client.py  semantic_server.py
scripts/grasp_generator/tools_superquadric/: multi_superquadric_fixed_number.py  multi_superquadric_generation.py  parameters_superquadrics.py  single_superquadric_generation.py
scripts/grasp_generator/utils/: gripper_control.py  menu.py  point_cloud_filtering.py  reasoning.py  standard_functions.py  superquadric_functions.py  utils_aruco_marker.py
scripts/grasp_generator/visualization/: single_superquadric_visualization.py  superquadric_visualization.py  visualization_grasps.py  visualization_mesh_cube_cylinder.py  visualization_superquadric.py  visualize_pointcloud.py
src/: __init__.pl  affordance_rules.pl  functions.pl  method_affordance.pl  shape_to_(task_and_class).pl  shape_to_function_to_task.pl  shape_to_task.pl  task_specific_rules.pl  tasks.pl
src/grasp_generator/: detect_server.cpp  grasp_messages.cpp  grasp_plotter.cpp
srv/: DetectGrasps.srv  PoseAruco.srv  QuadricDetect.srv  Semantic.srv
